[project]
name = "majorproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.14.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.3.3",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
